--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="particle"></div>
 
             <ol id="reasons-list">
-                <li>Te amo porque te vestís muy bien. Me encantan tus outfits, fue lo primero que me flasheó de vos cuando te conocí.</li>
+                <li>Te amo porque te vestís muy bien. Me encantan tus outfit, fue lo primero que dije de vos cuando te conocí.</li>
                 <li>Porque me tratás bonito, siempre con un cariño que me hace sentir único.</li>
                 <li>Porque te dan esos "ataques de amor" que me derriten todo.</li>
                 <li>Porque me das besitos de la nada y me alegrás el día entero.</li>
